// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SessionSummaryDisplay /> > renders correctly with given stats and duration 1`] = `
"╭────────────────────────────────────────────────────────────────╮
│                                                                │
│                  Enfiy Code Session Complete!                  │
│                                                                │
│                                                                │
│                                                                │
│  Session Statistics (10 Turns)                                 │
│  Input Tokens                                           1,000  │
│  Output Tokens                                          2,000  │
│  Tool Use Tokens                                          200  │
│  Thoughts Tokens                                          300  │
│  Cached Tokens                                    500 (14.3%)  │
│  ────────────────────────────────────────────────────────────  │
│  Total Tokens                                           3,500  │
│                                                                │
│  Performance Metrics                                           │
│  API Duration                                           50.2s  │
│  Total Duration                                    1h 23m 45s  │
│                                                                │
│               Thank you for using Enfiy Code!                  │
│                                                                │
╰────────────────────────────────────────────────────────────────╯"
`;

exports[`<SessionSummaryDisplay /> > renders zero state correctly 1`] = `
"╭────────────────────────────────────────────────────────────────╮
│                                                                │
│                  Enfiy Code Session Complete!                  │
│                                                                │
│                                                                │
│                                                                │
│  Session Statistics (0 Turns)                                  │
│  Input Tokens                                               0  │
│  Output Tokens                                              0  │
│  Thoughts Tokens                                            0  │
│  ────────────────────────────────────────────────────────────  │
│  Total Tokens                                               0  │
│                                                                │
│  Performance Metrics                                           │
│  API Duration                                              0s  │
│  Total Duration                                            0s  │
│                                                                │
│               Thank you for using Enfiy Code!                  │
│                                                                │
╰────────────────────────────────────────────────────────────────╯"
`;
